# gh-actions-playground

./: pyproject.toml  ruff.toml
.github/workflows/: github-actions-demo.yml
core/: settings.py
